--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
 body{
     background: #123;
+}
+div{
+    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
+
 *{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+}
+div h2{
+    color: white;
 }
 button:hover{
     color: white;
@@ -18,5 +28,7 @@ button{
     border: none;
     padding: 10px;
     width: 80px;
+    font-size: 22px;
+    font-size: 700;
     transition: 1s;
 }
