i do somme modifiction inn css and html

--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ body{
     height: 50vh;
     padding: 0;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+#test h2{
+    font-size: 32px;
+    font-weight: 700;
 }
 #pe{
     width: 100%;
